[gd_scene format=4 uid="uid://3b40f0aoueby"]

[ext_resource type="Texture2D" uid="uid://ci8w2oc47q458" path="res://assets/custom/lvel_menu/level_panel.png" id="1_gu58t"]
[ext_resource type="Script" uid="uid://drs7giktrx7it" path="res://script/ui/level_selection.gd" id="1_ubboj"]
[ext_resource type="PackedScene" uid="uid://daco4ljgy6n54" path="res://scene/ui/level_button.tscn" id="2_au35g"]
[ext_resource type="Texture2D" uid="uid://3agspp35pyt2" path="res://assets/custom/lvel_menu/back_button.png" id="3_au35g"]
[ext_resource type="PackedScene" uid="uid://srs55ncqup0n" path="res://scene/ui/user_profile_menu.tscn" id="5_1jxsr"]
[ext_resource type="Texture2D" uid="uid://crjyibdncl8fo" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 01.png" id="6_1f7xq"]
[ext_resource type="Texture2D" uid="uid://bskjb4ggf36sm" path="res://assets/custom/buttons/shop_button.png" id="6_n6nt7"]
[ext_resource type="Texture2D" uid="uid://ctrrihc6bo45x" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="7_2uncl"]
[ext_resource type="Texture2D" uid="uid://bvwk8s1acy4d0" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="8_edqay"]
[ext_resource type="Texture2D" uid="uid://diobg73l1yjy2" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="9_3si3o"]
[ext_resource type="Texture2D" uid="uid://c8fapdreqerdj" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="10_xv4lr"]
[ext_resource type="Texture2D" uid="uid://demyc2ifl8cg7" path="res://assets/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="11_knivc"]
[ext_resource type="Texture2D" uid="uid://bt0xkum7onekp" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/BG Image.png" id="12_qenq8"]
[ext_resource type="Texture2D" uid="uid://h77cp18jlrqu" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Water Reflect Big 01.png" id="13_0c5v5"]
[ext_resource type="Texture2D" uid="uid://c2mkd8hqvngvo" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Water Reflect Big 02.png" id="14_roy88"]
[ext_resource type="Texture2D" uid="uid://dox0wb2l012pg" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Water Reflect Big 03.png" id="15_l2m84"]
[ext_resource type="Texture2D" uid="uid://sexbpo5s7d6b" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Water Reflect Big 04.png" id="16_m7jrr"]
[ext_resource type="Texture2D" uid="uid://lujj13i1hoen" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Big Clouds.png" id="17_y711d"]
[ext_resource type="Texture2D" uid="uid://oiehaxh4j7hv" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Small Cloud 1.png" id="18_sbn01"]
[ext_resource type="Texture2D" uid="uid://bmpsnc2to0mlr" path="res://assets/Treasure Hunters/Palm Tree Island/Sprites/Background/Small Cloud 3.png" id="19_x5ccw"]
[ext_resource type="Texture2D" uid="uid://dgsou4ybt48md" path="res://assets/custom/BG ISLANDS.png" id="20_nlr1h"]
[ext_resource type="PackedScene" uid="uid://c8xl8vq78hcou" path="res://scene/world/decoration/front_regular_tree.tscn" id="21_inyqy"]
[ext_resource type="TileSet" uid="uid://d1yxhu13jwkq3" path="res://tileset/island.tres" id="22_j75k6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jhkib"]
texture = ExtResource("1_gu58t")
region_rect = Rect2(0, 0, 90, 90)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubboj"]
texture = ExtResource("3_au35g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_au35g"]
texture = ExtResource("3_au35g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hsqix"]
texture = ExtResource("6_n6nt7")
region_rect = Rect2(5, 4, 54, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_flbjg"]
texture = ExtResource("6_n6nt7")
region_rect = Rect2(5, 4, 54, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_tnv7a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1f7xq")
}, {
"duration": 1.0,
"texture": ExtResource("7_2uncl")
}, {
"duration": 1.0,
"texture": ExtResource("8_edqay")
}, {
"duration": 1.0,
"texture": ExtResource("9_3si3o")
}, {
"duration": 1.0,
"texture": ExtResource("10_xv4lr")
}, {
"duration": 1.0,
"texture": ExtResource("11_knivc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1nvqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_0c5v5")
}, {
"duration": 1.0,
"texture": ExtResource("14_roy88")
}, {
"duration": 1.0,
"texture": ExtResource("15_l2m84")
}, {
"duration": 1.0,
"texture": ExtResource("16_m7jrr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LevelSelection" type="Control" unique_id=1615835832]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubboj")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1502412757]

[node name="Panel" type="Panel" parent="CanvasLayer" unique_id=507221716]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.375
offset_top = -214.0
offset_right = 222.375
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jhkib")

[node name="LevelButton" parent="CanvasLayer/Panel" unique_id=1641662479 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 50.0
offset_top = 47.0
offset_right = 110.0
offset_bottom = 107.0
text = "1"

[node name="LevelButton2" parent="CanvasLayer/Panel" unique_id=1997281106 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 120.0
offset_top = 47.0
offset_right = 180.0
offset_bottom = 107.0
text = "2"
level = 2

[node name="LevelButton3" parent="CanvasLayer/Panel" unique_id=789967841 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 190.0
offset_top = 47.0
offset_right = 250.0
offset_bottom = 107.0
text = "3"
level = 3

[node name="LevelButton4" parent="CanvasLayer/Panel" unique_id=735720505 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 260.0
offset_top = 47.0
offset_right = 320.0
offset_bottom = 107.0
text = "4"
level = 4

[node name="LevelButton5" parent="CanvasLayer/Panel" unique_id=1727102824 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 330.0
offset_top = 47.0
offset_right = 390.0
offset_bottom = 107.0
text = "5"
level = 5

[node name="LevelButton18" parent="CanvasLayer/Panel" unique_id=225972740 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 190.375
offset_top = 130.0
offset_right = 250.375
offset_bottom = 190.0
text = "8
"
level = 8

[node name="LevelButton19" parent="CanvasLayer/Panel" unique_id=955097773 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 260.375
offset_top = 130.0
offset_right = 320.375
offset_bottom = 190.0
text = "9
"
level = 9

[node name="LevelButton20" parent="CanvasLayer/Panel" unique_id=266609881 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 330.375
offset_top = 130.0
offset_right = 390.375
offset_bottom = 190.0
text = "10
"
level = 10

[node name="LevelButton7" parent="CanvasLayer/Panel" unique_id=1211853031 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 120.375
offset_top = 130.0
offset_right = 180.375
offset_bottom = 190.0
text = "7"
level = 7

[node name="LevelButton6" parent="CanvasLayer/Panel" unique_id=1302740086 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 50.375
offset_top = 130.0
offset_right = 110.375
offset_bottom = 190.0
text = "6"
level = 6

[node name="LevelButton9" parent="CanvasLayer/Panel" unique_id=853216304 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 120.375
offset_top = 206.0
offset_right = 180.375
offset_bottom = 266.0
text = "12"
level = 12

[node name="LevelButton10" parent="CanvasLayer/Panel" unique_id=316306958 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 190.375
offset_top = 206.0
offset_right = 250.375
offset_bottom = 266.0
text = "13
"
level = 13

[node name="LevelButton11" parent="CanvasLayer/Panel" unique_id=262275407 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 50.375
offset_top = 206.0
offset_right = 110.375
offset_bottom = 266.0
text = "11
"
level = 11

[node name="LevelButton12" parent="CanvasLayer/Panel" unique_id=11255777 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 330.375
offset_top = 206.0
offset_right = 390.375
offset_bottom = 266.0
text = "15"
level = 15

[node name="LevelButton13" parent="CanvasLayer/Panel" unique_id=1462907257 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 260.375
offset_top = 206.0
offset_right = 320.375
offset_bottom = 266.0
text = "14
"
level = 14

[node name="LevelButton14" parent="CanvasLayer/Panel" unique_id=563115705 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 50.375
offset_top = 284.0
offset_right = 110.375
offset_bottom = 344.0
text = "16
"
level = 16

[node name="LevelButton15" parent="CanvasLayer/Panel" unique_id=285723232 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 120.375
offset_top = 284.0
offset_right = 180.375
offset_bottom = 344.0
text = "17
"
level = 17

[node name="LevelButton16" parent="CanvasLayer/Panel" unique_id=1633989110 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 190.375
offset_top = 284.0
offset_right = 250.375
offset_bottom = 344.0
text = "18"
level = 18

[node name="LevelButton17" parent="CanvasLayer/Panel" unique_id=1477637324 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 260.375
offset_top = 284.0
offset_right = 320.375
offset_bottom = 344.0
text = "19
"
level = 19

[node name="LevelButton21" parent="CanvasLayer/Panel" unique_id=1556875132 instance=ExtResource("2_au35g")]
layout_mode = 0
offset_left = 330.375
offset_top = 284.0
offset_right = 390.375
offset_bottom = 344.0
text = "20
"
level = 20

[node name="BackButton" type="Button" parent="CanvasLayer/Panel" unique_id=390595092]
layout_mode = 0
offset_left = -13.625
offset_top = -19.0
offset_right = 46.375
offset_bottom = 41.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ubboj")
theme_override_styles/hover = SubResource("StyleBoxTexture_au35g")

[node name="Achievements" type="Button" parent="CanvasLayer" unique_id=2055929365]
offset_left = 108.0
offset_top = 330.0
offset_right = 225.0
offset_bottom = 361.0
text = "Achievements"

[node name="Minigames" type="Button" parent="CanvasLayer" unique_id=887773092]
offset_left = 235.0
offset_top = 330.0
offset_right = 328.0
offset_bottom = 361.0
text = "Minigames"

[node name="UserProfileMenu" parent="CanvasLayer" unique_id=605145176 instance=ExtResource("5_1jxsr")]
offset_left = 19.0
offset_top = 113.0
offset_right = 331.0
offset_bottom = 318.0

[node name="ShopButton" type="Button" parent="CanvasLayer" unique_id=1218151441]
offset_left = 835.0
offset_top = 110.0
offset_right = 925.0
offset_bottom = 160.0
theme_override_styles/normal = SubResource("StyleBoxTexture_hsqix")
theme_override_styles/hover = SubResource("StyleBoxTexture_flbjg")

[node name="Camera2D" type="Camera2D" parent="." unique_id=158133266]
position = Vector2(443, 378)
zoom = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=755499935]
position = Vector2(249, 466)
sprite_frames = SubResource("SpriteFrames_tnv7a")
autoplay = "default"

[node name="Parallax" type="Node2D" parent="." unique_id=827228919]
z_index = -198

[node name="background" type="Parallax2D" parent="Parallax" unique_id=905957808]
repeat_size = Vector2(1162, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/background" unique_id=1945081584]
position = Vector2(492.5, 378.5)
scale = Vector2(1.7734375, 2.5078127)
texture = ExtResource("12_qenq8")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/background" unique_id=1903666879]
position = Vector2(492.5, 378.5)
scale = Vector2(1.7734375, 2.5078127)
texture = ExtResource("12_qenq8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Parallax/background" unique_id=2103743388]
position = Vector2(490.00003, 449)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1nvqo")
autoplay = "default"

[node name="sky" type="Parallax2D" parent="Parallax" unique_id=1847213685]
repeat_size = Vector2(680, 0)
autoscroll = Vector2(-3, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/sky" unique_id=1366473987]
position = Vector2(495, 358.0625)
scale = Vector2(1.5223212, 1.5061884)
texture = ExtResource("17_y711d")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/sky" unique_id=244728885]
position = Vector2(1175, 358)
scale = Vector2(1.5223212, 1.5061884)
texture = ExtResource("17_y711d")

[node name="2ndSky" type="Parallax2D" parent="Parallax" unique_id=303758196]
repeat_size = Vector2(690, 0)
autoscroll = Vector2(-15, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/2ndSky" unique_id=157280524]
position = Vector2(374, 350)
texture = ExtResource("18_sbn01")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/2ndSky" unique_id=1520918671]
position = Vector2(767, 257)
texture = ExtResource("19_x5ccw")

[node name="Sprite2D3" type="Sprite2D" parent="Parallax/2ndSky" unique_id=1921040488]
position = Vector2(542, 261)
texture = ExtResource("18_sbn01")

[node name="Sprite2D4" type="Sprite2D" parent="Parallax/2ndSky" unique_id=229255292]
position = Vector2(341, 262)
texture = ExtResource("18_sbn01")

[node name="Mountain" type="Parallax2D" parent="Parallax" unique_id=1971341851]
repeat_size = Vector2(690, 0)
autoscroll = Vector2(-5, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Mountain" unique_id=1735777830]
position = Vector2(348, 416)
texture = ExtResource("20_nlr1h")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/Mountain" unique_id=988879179]
position = Vector2(649, 414)
texture = ExtResource("20_nlr1h")

[node name="Mountain2" type="Parallax2D" parent="Parallax" unique_id=85383969]
repeat_size = Vector2(690, 0)
autoscroll = Vector2(-25, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Mountain2" unique_id=373694424]
position = Vector2(376, 459)
texture = ExtResource("20_nlr1h")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/Mountain2" unique_id=1102584255]
position = Vector2(676, 440)
texture = ExtResource("20_nlr1h")

[node name="tile" type="Parallax2D" parent="Parallax" unique_id=1842793542]
repeat_size = Vector2(900, 0)
autoscroll = Vector2(-70, 0)

[node name="BackStandingTree" parent="Parallax/tile" unique_id=1209238452 instance=ExtResource("21_inyqy")]
z_index = 0
position = Vector2(672, 417)

[node name="TileMapLayer" type="TileMapLayer" parent="Parallax/tile" unique_id=1449029329]
position = Vector2(733, 542)
tile_map_data = PackedByteArray("AADc//z/AAACAAAAAADc//3/AAATAAEAAADc//7/AAATAAEAAADc////AAATAAEAAADc/wAAAAATAAEAAADc/wEAAAATAAEAAADd//z/AAACAAAAAADd//3/AAATAAEAAADd//7/AAATAAEAAADd////AAATAAEAAADd/wAAAAATAAEAAADd/wEAAAATAAEAAADe//z/AAACAAAAAADe//3/AAADAAIAAADe//7/AAATAAEAAADe////AAATAAEAAADe/wAAAAATAAEAAADe/wEAAAATAAEAAADf//z/AAACAAAAAADf//3/AAABAAEAAADf//7/AAATAAEAAADf////AAATAAEAAADf/wAAAAATAAEAAADf/wEAAAATAAEAAADg//z/AAACAAAAAADg//3/AAACAAEAAADg//7/AAATAAEAAADg////AAATAAEAAADg/wAAAAATAAEAAADg/wEAAAATAAEAAADh//z/AAACAAAAAADh//3/AAADAAEAAADh//7/AAATAAEAAADh////AAATAAEAAADh/wAAAAATAAEAAADh/wEAAAATAAEAAADi//z/AAACAAAAAADi//3/AAAEAAEAAADi//7/AAATAAEAAADi////AAATAAEAAADi/wAAAAATAAEAAADi/wEAAAATAAEAAADj//z/AAACAAAAAADj//3/AAADAAIAAADj//7/AAATAAEAAADj////AAATAAEAAADj/wAAAAATAAEAAADj/wEAAAATAAEAAADk//z/AAACAAAAAADk//3/AAADAAIAAADk//7/AAATAAEAAADk////AAATAAEAAADk/wAAAAATAAEAAADk/wEAAAATAAEAAADl//z/AAACAAAAAADl//3/AAABAAEAAADl//7/AAATAAEAAADl////AAATAAEAAADl/wAAAAATAAEAAADl/wEAAAATAAEAAADm//z/AAACAAAAAADm//3/AAACAAEAAADm//7/AAATAAEAAADm////AAATAAEAAADm/wAAAAATAAEAAADm/wEAAAATAAEAAADn//z/AAACAAAAAADn//3/AAADAAEAAADn//7/AAATAAEAAADn////AAATAAEAAADn/wAAAAATAAEAAADn/wEAAAATAAEAAADo//z/AAACAAAAAADo//3/AAADAAIAAADo//7/AAATAAEAAADo////AAATAAEAAADo/wAAAAATAAEAAADo/wEAAAATAAEAAADp//z/AAACAAAAAADp//3/AAADAAIAAADp//7/AAATAAEAAADp////AAATAAEAAADp/wAAAAATAAEAAADp/wEAAAATAAEAAADq//z/AAACAAAAAADq//3/AAADAAIAAADq//7/AAATAAEAAADq////AAATAAEAAADq/wAAAAATAAEAAADq/wEAAAATAAEAAADr//z/AAACAAAAAADr//3/AAABAAEAAADr//7/AAATAAEAAADr////AAATAAEAAADr/wAAAAATAAEAAADr/wEAAAATAAEAAADs//z/AAACAAAAAADs//3/AAACAAIAAADs//7/AAATAAEAAADs////AAATAAEAAADs/wAAAAATAAEAAADs/wEAAAATAAEAAADt//z/AAACAAAAAADt//3/AAADAAIAAADt//7/AAATAAEAAADt////AAATAAEAAADt/wAAAAATAAEAAADt/wEAAAATAAEAAADu//z/AAADAAAAAADu//3/AAAEAAIAAADu//7/AAATAAEAAADu////AAATAAEAAADu/wAAAAATAAEAAADu/wEAAAATAAEAAADv//z/AAABAAAAAADv//3/AAACAAIAAADv//7/AAATAAEAAADv////AAATAAEAAADv/wAAAAATAAEAAADv/wEAAAATAAEAAADw//z/AAACAAAAAADw//3/AAADAAIAAADw//7/AAATAAEAAADw////AAATAAEAAADw/wAAAAATAAEAAADw/wEAAAATAAEAAADx//z/AAADAAAAAADx//3/AAAEAAIAAADx//7/AAATAAEAAADx////AAATAAEAAADx/wAAAAATAAEAAADx/wEAAAATAAEAAADy//z/AAAEAAAAAADy//3/AAACAAIAAADy//7/AAATAAEAAADy////AAATAAEAAADy/wAAAAATAAEAAADy/wEAAAATAAEAAADz//z/AAACAAAAAADz//3/AAADAAIAAADz//7/AAATAAEAAADz////AAATAAEAAADz/wAAAAATAAEAAADz/wEAAAATAAEAAAD0//z/AAADAAAAAAD0//3/AAACAAIAAAD0//7/AAATAAEAAAD0////AAATAAEAAAD0/wAAAAATAAEAAAD0/wEAAAATAAEAAAD1//z/AAABAAAAAAD1//3/AAADAAIAAAD1//7/AAATAAEAAAD1////AAATAAEAAAD1/wAAAAATAAEAAAD1/wEAAAATAAEAAAD2//z/AAACAAAAAAD2//3/AAACAAIAAAD2//7/AAATAAEAAAD2////AAATAAEAAAD2/wAAAAATAAEAAAD2/wEAAAATAAEAAAD3//z/AAADAAAAAAD3//3/AAADAAIAAAD3//7/AAATAAEAAAD3////AAATAAEAAAD3/wAAAAATAAEAAAD3/wEAAAATAAEAAAD4//z/AAAEAAAAAAD4//3/AAACAAIAAAD4//7/AAATAAEAAAD4////AAATAAEAAAD4/wAAAAATAAEAAAD4/wEAAAATAAEAAAD5//3/AAADAAIAAAD5//7/AAATAAEAAAD5////AAATAAEAAAD5/wAAAAATAAEAAAD5/wEAAAATAAEAAAD6//3/AAABAAMAAAD6//7/AAATAAEAAAD6////AAATAAEAAAD6/wAAAAATAAEAAAD6/wEAAAATAAEAAAD7//z/AAACAAAAAAD7//3/AAACAAMAAAD7//7/AAATAAEAAAD7////AAATAAEAAAD7/wAAAAATAAEAAAD7/wEAAAATAAEAAAD8//z/AAACAAAAAAD8//3/AAADAAMAAAD8//7/AAATAAEAAAD8////AAATAAEAAAD8/wAAAAATAAEAAAD8/wEAAAATAAEAAAD9//z/AAACAAAAAAD9//3/AAADAAIAAAD9//7/AAATAAEAAAD9////AAATAAEAAAD9/wAAAAATAAEAAAD9/wEAAAATAAEAAAD+//3/AAATAAIAAAD+//7/AAATAAEAAAD+////AAATAAEAAAD+/wAAAAATAAEAAAD+/wEAAAATAAEAAAD///z/AAACAAAAAAD///3/AAATAAEAAAD///7/AAATAAEAAAD/////AAATAAEAAAD//wAAAAATAAEAAAD//wEAAAATAAEAAAAAAPz/AAACAAAAAAAAAP3/AAACAAIAAAAAAP7/AAACAAIAAADY//z/AAACAAAAAADY//3/AAATAAEAAADY//7/AAATAAEAAADY////AAATAAEAAADY/wAAAAATAAEAAADY/wEAAAATAAEAAADZ//z/AAACAAAAAADZ//3/AAATAAEAAADZ//7/AAATAAEAAADZ////AAATAAEAAADZ/wAAAAATAAEAAADZ/wEAAAATAAEAAADa//z/AAACAAAAAADa//3/AAATAAEAAADa//7/AAATAAEAAADa////AAATAAEAAADa/wAAAAATAAEAAADa/wEAAAATAAEAAADb//z/AAACAAAAAADb//3/AAATAAEAAADb//7/AAATAAEAAADb////AAATAAEAAADb/wAAAAATAAEAAADb/wEAAAATAAEAAADc/wIAAAATAAEAAADc/wMAAAATAAEAAADc/wQAAAATAAEAAADd/wIAAAATAAEAAADd/wMAAAATAAEAAADd/wQAAAATAAEAAADe/wIAAAATAAEAAADe/wMAAAATAAEAAADe/wQAAAATAAEAAADf/wIAAAATAAEAAADf/wMAAAATAAEAAADf/wQAAAATAAEAAADg/wIAAAATAAEAAADg/wMAAAATAAEAAADg/wQAAAATAAEAAADh/wIAAAATAAEAAADh/wMAAAATAAEAAADh/wQAAAATAAEAAADi/wIAAAATAAEAAADi/wMAAAATAAEAAADi/wQAAAATAAEAAADj/wIAAAATAAEAAADj/wMAAAATAAEAAADj/wQAAAATAAEAAADk/wIAAAATAAEAAADk/wMAAAATAAEAAADk/wQAAAATAAEAAADl/wIAAAATAAEAAADl/wMAAAATAAEAAADl/wQAAAATAAEAAADm/wIAAAATAAEAAADm/wMAAAATAAEAAADm/wQAAAATAAEAAADn/wIAAAATAAEAAADn/wMAAAATAAEAAADn/wQAAAATAAEAAADo/wIAAAATAAEAAADo/wMAAAATAAEAAADo/wQAAAATAAEAAADp/wIAAAATAAEAAADp/wMAAAATAAEAAADp/wQAAAATAAEAAADq/wIAAAATAAEAAADq/wMAAAATAAEAAADq/wQAAAATAAEAAADr/wIAAAATAAEAAADr/wMAAAATAAEAAADr/wQAAAATAAEAAADs/wIAAAATAAEAAADs/wMAAAATAAEAAADs/wQAAAATAAEAAADt/wIAAAATAAEAAADt/wMAAAATAAEAAADt/wQAAAATAAEAAADu/wIAAAATAAEAAADu/wMAAAATAAEAAADu/wQAAAATAAEAAADv/wIAAAATAAEAAADv/wMAAAATAAEAAADv/wQAAAATAAEAAADw/wIAAAATAAEAAADw/wMAAAATAAEAAADw/wQAAAATAAEAAADx/wIAAAATAAEAAADx/wMAAAATAAEAAADx/wQAAAATAAEAAADy/wIAAAATAAEAAADy/wMAAAATAAEAAADy/wQAAAATAAEAAADz/wIAAAATAAEAAADz/wMAAAATAAEAAADz/wQAAAATAAEAAAD0/wIAAAATAAEAAAD0/wMAAAATAAEAAAD0/wQAAAATAAEAAAD1/wIAAAATAAEAAAD1/wMAAAATAAEAAAD1/wQAAAATAAEAAAD2/wIAAAATAAEAAAD2/wMAAAATAAEAAAD2/wQAAAATAAEAAAD3/wIAAAATAAEAAAD3/wMAAAATAAEAAAD3/wQAAAATAAEAAAD4/wIAAAATAAEAAAD4/wMAAAATAAEAAAD4/wQAAAATAAEAAAD5/wIAAAATAAEAAAD5/wMAAAATAAEAAAD5/wQAAAATAAEAAAD6/wIAAAATAAEAAAD6/wMAAAATAAEAAAD6/wQAAAATAAEAAAD7/wIAAAATAAEAAAD7/wMAAAATAAEAAAD7/wQAAAATAAEAAAD8/wIAAAATAAEAAAD8/wMAAAATAAEAAAD8/wQAAAATAAEAAAD9/wIAAAATAAEAAAD9/wMAAAATAAEAAAD9/wQAAAATAAEAAAD+/wIAAAATAAEAAAD+/wMAAAATAAEAAAD+/wQAAAATAAEAAAD//wIAAAATAAEAAAD//wMAAAATAAEAAAD//wQAAAATAAEAAAAAAP//AAACAAIAAAAAAAAAAAACAAIAAAAAAAEAAAACAAIAAAAAAAIAAAACAAIAAAAAAAMAAAACAAIAAAAAAAQAAAACAAIAAAABAPz/AAACAAAAAAD5//z/AAAVAAYAAAD+//z/AAACAAAAAAD6//z/AAACAAAAAAACAPz/AAACAAAAAAADAPz/AAACAAAAAAAEAPz/AAACAAAAAAAFAPz/AAACAAAAAAAGAPz/AAACAAAAAAAHAPz/AAACAAAAAAAIAPz/AAACAAAAAAAJAPz/AAACAAAAAAAKAPz/AAACAAAAAAALAPz/AAACAAAAAAAMAPz/AAACAAAAAAANAPz/AAACAAAAAAAOAPz/AAACAAAAAAAPAPz/AAACAAAAAAAQAPz/AAACAAAAAAARAPz/AAAFAAAAAAABAP3/AAACAAIAAAABAP7/AAACAAIAAAABAP//AAACAAIAAAABAAAAAAACAAIAAAABAAEAAAACAAIAAAABAAIAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAACAP3/AAACAAIAAAACAP7/AAACAAIAAAACAP//AAACAAIAAAACAAAAAAACAAIAAAACAAEAAAACAAIAAAACAAIAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAADAP3/AAACAAIAAAADAP7/AAACAAIAAAADAP//AAACAAIAAAADAAAAAAACAAIAAAADAAEAAAACAAIAAAADAAIAAAACAAIAAAADAAMAAAACAAIAAAADAAQAAAACAAIAAAAEAP3/AAACAAIAAAAEAP7/AAACAAIAAAAEAP//AAACAAIAAAAEAAAAAAACAAIAAAAEAAEAAAACAAIAAAAEAAIAAAACAAIAAAAEAAMAAAACAAIAAAAEAAQAAAACAAIAAAAFAP3/AAACAAIAAAAFAP7/AAACAAIAAAAFAP//AAACAAIAAAAFAAAAAAACAAIAAAAFAAEAAAACAAIAAAAFAAIAAAACAAIAAAAFAAMAAAACAAIAAAAFAAQAAAACAAIAAAAGAP3/AAACAAIAAAAGAP7/AAACAAIAAAAGAP//AAACAAIAAAAGAAAAAAACAAIAAAAGAAEAAAACAAIAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAGAAQAAAACAAIAAAAHAP3/AAACAAIAAAAHAP7/AAACAAIAAAAHAP//AAACAAIAAAAHAAAAAAACAAIAAAAHAAEAAAACAAIAAAAHAAIAAAACAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAIAAAAIAP3/AAACAAIAAAAIAP7/AAACAAIAAAAIAP//AAACAAIAAAAIAAAAAAACAAIAAAAIAAEAAAACAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAAIAAQAAAACAAIAAAAJAP3/AAACAAIAAAAJAP7/AAACAAIAAAAJAP//AAACAAIAAAAJAAAAAAACAAIAAAAJAAEAAAACAAIAAAAJAAIAAAACAAIAAAAJAAMAAAACAAIAAAAJAAQAAAACAAIAAAAKAP3/AAACAAIAAAAKAP7/AAACAAIAAAAKAP//AAACAAIAAAAKAAAAAAACAAIAAAAKAAEAAAACAAIAAAAKAAIAAAACAAIAAAAKAAMAAAACAAIAAAAKAAQAAAACAAIAAAALAP3/AAACAAIAAAALAP7/AAACAAIAAAALAP//AAACAAIAAAALAAAAAAACAAIAAAALAAEAAAACAAIAAAALAAIAAAACAAIAAAALAAMAAAACAAIAAAALAAQAAAACAAIAAAAMAP3/AAACAAIAAAAMAP7/AAACAAIAAAAMAP//AAACAAIAAAAMAAAAAAACAAIAAAAMAAEAAAACAAIAAAAMAAIAAAACAAIAAAAMAAMAAAACAAIAAAAMAAQAAAACAAIAAAANAP3/AAACAAIAAAANAP7/AAACAAIAAAANAP//AAACAAIAAAANAAAAAAACAAIAAAANAAEAAAACAAIAAAANAAIAAAACAAIAAAANAAMAAAACAAIAAAANAAQAAAACAAIAAAAOAP3/AAACAAIAAAAOAP7/AAACAAIAAAAOAP//AAACAAIAAAAOAAAAAAACAAIAAAAOAAEAAAACAAIAAAAOAAIAAAACAAIAAAAOAAMAAAACAAIAAAAOAAQAAAACAAIAAAAPAP3/AAACAAIAAAAPAP7/AAACAAIAAAAPAP//AAACAAIAAAAPAAAAAAACAAIAAAAPAAEAAAACAAIAAAAPAAIAAAACAAIAAAAPAAMAAAACAAIAAAAPAAQAAAACAAIAAAAQAP3/AAACAAIAAAAQAP7/AAACAAIAAAAQAP//AAACAAIAAAAQAAAAAAACAAIAAAAQAAEAAAACAAIAAAAQAAIAAAACAAIAAAAQAAMAAAACAAIAAAAQAAQAAAACAAIAAAARAP3/AAACAAIAAAARAP7/AAACAAIAAAARAP//AAACAAIAAAARAAAAAAACAAIAAAARAAEAAAACAAIAAAARAAIAAAACAAIAAAARAAMAAAACAAIAAAARAAQAAAACAAIAAAASAP3/AAACAAIAAAASAP7/AAACAAIAAAASAP//AAACAAIAAAASAAAAAAACAAIAAAASAAEAAAACAAIAAAASAAIAAAACAAIAAAASAAMAAAACAAIAAAASAAQAAAACAAIAAAATAP3/AAACAAIAAAATAP7/AAACAAIAAAATAP//AAACAAIAAAATAAAAAAACAAIAAAATAAEAAAACAAIAAAATAAIAAAACAAIAAAATAAMAAAACAAIAAAATAAQAAAACAAIAAAA=")
tile_set = ExtResource("22_j75k6")

[connection signal="pressed" from="CanvasLayer/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="CanvasLayer/Minigames" to="." method="_on_button_pressed"]
